# pcl-ros-tutorial

./: LICENSE  PCL Reference with ROS.md  README.md
Models/dragon/: LICENSE  dragon_sparse.pcd  view_model.sh
Starter Code/demo_code/octomap_rviz_plugins/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin_description.xml
Starter Code/demo_code/octomap_rviz_plugins/include/octomap_rviz_plugins/: occupancy_grid_display.h  occupancy_map_display.h
Starter Code/demo_code/octomap_rviz_plugins/src/: occupancy_grid_display.cpp  occupancy_map_display.cpp
Starter Code/demo_code/pcl_tester/: CMakeLists.txt  package.xml
Starter Code/demo_code/pcl_tester/launch/: basic_nodelet.launch  cylinder_segmentation.launch  euclidean_cluster_extraction.launch  floor_segmentation.launch  octomap.launch  pcl_tester.launch  voxel_grid_filtering.launch
Starter Code/demo_code/pcl_tester/objects/: simple_box.urdf  simple_cylinder.urdf
Starter Code/demo_code/pcl_tester/rviz/: cylinder_segmentation.rviz  euclidean_cluster_extraction.rviz  floor_segmentation.rviz  octomap.rviz  pcl_tester.rviz  voxel_grid_filtering.rviz
Starter Code/demo_code/pcl_tester/worlds/: pcl_tester.world
Starter Code/demo_code/pcl_tester_description/: CMakeLists.txt  package.xml
Starter Code/demo_code/pcl_tester_description/config/: control.yaml
Starter Code/demo_code/pcl_tester_description/urdf/: depth_camera.urdf.xacro
Starter Code/minimal_pcl/: CMakeLists.txt  package.xml
Starter Code/minimal_pcl/src/: minimal_pub_sub.cpp
