<?xml version="1.0"?>
<package>
  <name>minimal_pcl</name>
  <version>0.0.0</version>
  <description>Minimal PCL pubsub Package</description>

  <maintainer email="methylDragon@gmail.com">methylDragon</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
