<package>
  <name>octomap_rviz_plugins</name>
  <version>0.2.0</version>
    <description>
     A set of plugins for displaying occupancy information decoded from binary octomap messages. 
    </description>

  <maintainer email="armin@hornung.io">Armin Hornung</maintainer>
  
  <url type="website">http://ros.org/wiki/octomap_rviz_plugins</url>
  <url type="bugtracker">https://github.com/OctoMap/octomap_rviz_plugins/issues</url>

  <license>BSD</license>

  <author email="jkammerl@willowgarage.com">Julius Kammerl</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
 
  <run_depend>octomap_msgs</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
